# ui-screenshot-to-prompt

./: pyproject.toml
src/ui-screenshot-to-prompt/: api.py  config.py  main.py
